--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.83.0",
     "body-parser": "^2.2.0",
     "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "node-fetch": "^2.7.0"
   }
 }
