--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "@supabase/supabase-js": "^2.83.0",
     "body-parser": "^2.2.0",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "node-fetch": "^2.7.0"
+    "express": "^4.19.2", 
+    "node-fetch": "^2.7.0",
+    
+    // --- CRITICAL MISSING DEPENDENCIES FOR DIALOGFLOW/GEMINI ---
+    "@google/generative-ai": "^0.15.0", 
+    "dialogflow-fulfillment": "^0.6.1"
+    // If you are using @google-cloud/dialogflow (which your older code imported) you may need that too.
   }
 }
